--- a/vehicles/templates/vehicles/create_vehicle.html
+++ b/vehicles/templates/vehicles/create_vehicle.html
@@ -4,7 +4,7 @@
     <div class="col-md-8 col-lg-6">
       <div class="card shadow">
         <div class="card-header bg-primary text-white text-center">
-          <h3 class="mb-0">Cadastro de Veículo</h3>
+          <h3 class="mb-0">Cadastro de Veículos</h3>
         </div>
         <div class="card-body">
           <form method="post">
