--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -26,15 +26,25 @@
         border-right: 1px solid #dee2e6;
         padding-top: 1rem;
       }
-
       .content {
         margin-left: 250px;
         padding: 20px;
       }
-
-      .sidebar .nav-link.active {
+      .sidebar .nav-link.active,
+      .sidebar .nav-link:hover {
         background-color: #e9ecef;
         border-radius: 8px;
+      }
+      .sidebar .nav-link,
+      .sidebar a,
+      .sidebar i {
+        color: #0d6efd;
+      }
+      .sidebar .nav-link:hover {
+        color: #0b5ed7;
+      }
+      .sidebar .fs-4 {
+        font-weight: bold;
       }
     </style>
   </head>
@@ -48,29 +58,29 @@
       <ul class="nav nav-pills flex-column mb-auto">
         <li>
           <a href="{% url 'list_vehicles' %}" class="nav-link">
-            <i class="bi bi-car-front-fill"></i> Veículos
+            <i class="bi bi-car-front-fill me-2"></i> Veículos
           </a>
         </li>
         <li>
           <a href="#" class="nav-link">
-            <i class="bi bi-people-fill"></i> Clientes
+            <i class="bi bi-people-fill me-2"></i> Clientes
           </a>
         </li>
         <li>
           <a href="#" class="nav-link">
-            <i class="bi bi-person-badge-fill"></i> Funcionários
+            <i class="bi bi-person-badge-fill me-2"></i> Funcionários
           </a>
         </li>
       </ul>
       <hr />
       <div class="mt-auto">
-        <a href="#" class="nav-link text-muted">
-          <i class="bi bi-gear-fill"></i> Configurações
+        <a href="#" class="nav-link">
+          <i class="bi bi-gear-fill me-2"></i> Configurações
         </a>
       </div>
     </div>
 
-    <main class="p-4 w-100">{% block content %}{% endblock %}</main>
+    <main class="content">{% block content %}{% endblock %}</main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
