--- a/vehicles/templates/vehicles/create_vehicle.html
+++ b/vehicles/templates/vehicles/create_vehicle.html
@@ -9,11 +9,26 @@
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            <div class="form-group">{{ form.as_p }}</div>
-            <div class="text-center">
-              <button type="submit" class="btn btn-primary">Cadastrar</button>
-              <button type="reset" class="btn btn-secondary ml-2">
-                Limpar
+            <div class="form-group mb-4">{{ form.as_p }}</div>
+
+            <div class="d-flex justify-content-end gap-2 mt-3">
+              <a
+                href="{% url 'list_vehicles' %}"
+                class="btn btn-outline-secondary d-flex align-items-center"
+              >
+                <i class="bi bi-arrow-left me-2"></i> Voltar
+              </a>
+              <button
+                type="reset"
+                class="btn btn-secondary d-flex align-items-center"
+              >
+                <i class="bi bi-x-circle me-2"></i> Limpar
+              </button>
+              <button
+                type="submit"
+                class="btn btn-primary d-flex align-items-center"
+              >
+                <i class="bi bi-check-circle me-2"></i> Cadastrar
               </button>
             </div>
           </form>
