--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -1,25 +1,27 @@
 {% extends "base/base.html" %} {% block content %}
 <div class="container mt-4">
   <div class="d-flex align-items-center justify-content-between mb-3 flex-wrap">
-    <h3 class="mb-0 mr-3">Veículos</h3>
+    <h3 class="mb-0 me-3 text-primary">Veículos</h3>
 
-    <a href="{% url 'create_vehicle' %}" class="btn btn-primary"
-      >Novo Veículo</a
-    >
+    <div class="d-flex ms-auto">
+      <form class="form-inline d-flex me-2">
+        <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Buscar"
+          aria-label="Buscar"
+        />
+        <button class="btn btn-outline-primary" type="submit">Buscar</button>
+      </form>
 
-    <form class="form-inline ml-auto d-flex">
-      <input
-        class="form-control mr-2"
-        type="search"
-        placeholder="Buscar"
-        aria-label="Buscar"
-      />
-      <button class="btn btn-outline-success" type="submit">Buscar</button>
-    </form>
+      <a href="{% url 'create_vehicle' %}" class="btn btn-primary">
+        Novo Veículo
+      </a>
+    </div>
   </div>
 
-  <table class="table table-striped table-sm">
-    <thead class="thead-dark">
+  <table class="table table-striped table-hover">
+    <thead class="table-primary">
       <tr>
         <th scope="col">ID</th>
         <th scope="col">Marca</th>
@@ -40,13 +42,15 @@
         <td>{{ vehicle.color }}</td>
         <td>{{ vehicle.status }}</td>
         <td>
-          <a href="{% url 'vehicle_detail' vehicle.id %}" class="btn"
-            ><i class="bi bi-eye text-primary"></i
-          ></a>
-          <a href="{% url 'update_vehicle' vehicle.id %}" class="btn"
-            ><i class="bi bi-pencil-square text-primary"></i
-          ></a>
-          <a class="btn"><i class="bi bi-ban text-primary"></i></a>
+          <a href="{% url 'vehicle_detail' vehicle.id %}" class="btn btn-sm">
+            <i class="bi bi-eye text-primary"></i>
+          </a>
+          <a href="{% url 'update_vehicle' vehicle.id %}" class="btn btn-sm">
+            <i class="bi bi-pencil-square text-primary"></i>
+          </a>
+          <a class="btn btn-sm">
+            <i class="bi bi-ban text-primary"></i>
+          </a>
         </td>
       </tr>
       {% endfor %}
