--- a/vehicles/templates/vehicles/update_vehicle.html
+++ b/vehicles/templates/vehicles/update_vehicle.html
@@ -10,16 +10,19 @@
           <form method="post">
             {% csrf_token %} {{ form.as_p }}
 
-            <div class="text-center mt-4">
-              <button type="submit" class="btn btn-primary">
-                <i class="bi bi-arrow-repeat mr-1"></i> Atualizar
-              </button>
+            <div class="d-flex justify-content-end gap-2 mt-4">
               <a
                 href="{% url 'list_vehicles' %}"
-                class="btn btn-secondary ml-2"
+                class="btn btn-secondary d-flex align-items-center"
               >
-                <i class="bi bi-x-circle mr-1"></i> Cancelar
+                <i class="bi bi-x-circle me-2"></i> Cancelar
               </a>
+              <button
+                type="submit"
+                class="btn btn-primary d-flex align-items-center"
+              >
+                <i class="bi bi-arrow-repeat me-2"></i> Atualizar
+              </button>
             </div>
           </form>
         </div>
