--- a/vehicles/templates/vehicles/vehicle_detail.html
+++ b/vehicles/templates/vehicles/vehicle_detail.html
@@ -1,5 +1,4 @@
 {% extends "base/base.html" %} {% block content %}
-
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6">
@@ -10,7 +9,7 @@
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="id">ID</label>
               <input
                 type="text"
@@ -21,7 +20,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="vehicle_type">Tipo</label>
               <input
                 type="text"
@@ -32,7 +31,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="brand">Marca</label>
               <input
                 type="text"
@@ -43,7 +42,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="model">Modelo</label>
               <input
                 type="text"
@@ -54,7 +53,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="year">Ano</label>
               <input
                 type="text"
@@ -65,7 +64,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="color">Cor</label>
               <input
                 type="text"
@@ -76,7 +75,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="km">Quilometragem</label>
               <input
                 type="text"
@@ -87,7 +86,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="status">Status</label>
               <input
                 type="text"
@@ -98,7 +97,7 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="price_per_day">Preço</label>
               <input
                 type="text"
@@ -109,14 +108,14 @@
               />
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="description">Descrição</label>
               <textarea class="form-control" id="description" rows="3" disabled>
 {{ vehicle.description }}</textarea
               >
             </div>
 
-            <div class="form-group">
+            <div class="form-group mb-3">
               <label for="created_at">Data Criação</label>
               <input
                 type="text"
@@ -127,15 +126,19 @@
               />
             </div>
 
-            <div class="text-center">
-              <a href="{% url 'list_vehicles' %}" class="btn btn-primary"
-                >Voltar</a
+            <div class="d-flex justify-content-end gap-2 mt-4">
+              <a
+                href="{% url 'list_vehicles' %}"
+                class="btn btn-primary d-flex align-items-center"
               >
+                <i class="bi bi-arrow-left me-2"></i> Voltar
+              </a>
               <a
                 href="{% url 'update_vehicle' vehicle.id %}"
-                class="btn btn-secondary ml-2"
-                >Editar</a
+                class="btn btn-secondary d-flex align-items-center"
               >
+                <i class="bi bi-pencil-square me-2"></i> Editar
+              </a>
             </div>
           </form>
         </div>
