--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -20,6 +20,21 @@
     </div>
   </div>
 
+  {% if messages %} {% for message in messages %}
+  <div
+    class="alert alert-{{ message.tags }} alert-dismissible fade show"
+    role="alert"
+  >
+    {{ message }}
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Fechar"
+    ></button>
+  </div>
+  {% endfor %} {% endif %}
+
   <table class="table table-striped table-hover">
     <thead class="table-primary">
       <tr>
@@ -28,6 +43,10 @@
         <th scope="col">Modelo</th>
         <th scope="col">Ano</th>
         <th scope="col">Cor</th>
+        <th scope="col">Tipo</th>
+        <th scope="col">Placa</th>
+        <th scope="col">Km</th>
+        <th scope="col">Classe</th>
         <th scope="col">Status</th>
         <th scope="col"></th>
       </tr>
@@ -40,6 +59,10 @@
         <td>{{ vehicle.model }}</td>
         <td>{{ vehicle.year }}</td>
         <td>{{ vehicle.color }}</td>
+        <td>{{ vehicle.vehicle_type }}</td>
+        <td>{{ vehicle.plate }}</td>
+        <td>{{ vehicle.km }}</td>
+        <td>{{ vehicle.vehicle_class }}</td>
         <td>{{ vehicle.status }}</td>
         <td>
           <a href="{% url 'vehicle_detail' vehicle.id %}" class="btn btn-sm">
@@ -48,13 +71,68 @@
           <a href="{% url 'update_vehicle' vehicle.id %}" class="btn btn-sm">
             <i class="bi bi-pencil-square text-primary"></i>
           </a>
-          <a class="btn btn-sm">
-            <i class="bi bi-ban text-primary"></i>
-          </a>
+          <button
+            type="button"
+            class="btn btn-sm"
+            data-bs-toggle="modal"
+            data-bs-target="#deleteModal{{ vehicle.id }}"
+          >
+            <i class="bi bi-trash text-danger"></i>
+          </button>
+
+          <div
+            class="modal fade"
+            id="deleteModal{{ vehicle.id }}"
+            tabindex="-1"
+            aria-labelledby="deleteModalLabel{{ vehicle.id }}"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="deleteModalLabel{{ vehicle.id }}">
+                    Confirmar Exclusão
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Fechar"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  Tem certeza que deseja excluir o veículo
+                  <strong>{{ vehicle.brand }} {{ vehicle.model }}</strong>?
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Cancelar
+                  </button>
+                  <form
+                    method="post"
+                    action="{% url 'delete_vehicle' vehicle.id %}"
+                  >
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">
+                      Excluir
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
+
+  {% if vehicles.count == 0 %}
+  <div class="alert" role="alert">Nenhum veículo encontrado.</div>
+  {% endif %}
 </div>
 {% endblock %}
