--- a/vehicles/templates/vehicles/vehicle_detail.html
+++ b/vehicles/templates/vehicles/vehicle_detail.html
@@ -98,16 +98,15 @@
             </div>
 
             <div class="form-group mb-3">
-              <label for="price_per_day">Preço</label>
+              <label for="vehicle_class">Classe</label>
               <input
                 type="text"
                 class="form-control"
-                id="price_per_day"
-                value="{{ vehicle.price_per_day }}"
+                id="vehicle_class"
+                value="{{ vehicle.vehicle_class }}"
                 disabled
               />
             </div>
-
             <div class="form-group mb-3">
               <label for="description">Descrição</label>
               <textarea class="form-control" id="description" rows="3" disabled>
@@ -125,6 +124,16 @@
                 disabled
               />
             </div>
+
+            <div class="form-group mb-3">
+              <label for="updated_at">Placa</label>
+              <input
+                type="text"
+                class="form-control"
+                id="plate"
+                value="{{ vehicle.plate }}"
+                disabled
+              />
 
             <div class="d-flex justify-content-end gap-2 mt-4">
               <a
