--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -50,8 +50,8 @@
   </head>
   <body>
     <div class="sidebar d-flex flex-column p-3">
-      <a href="#" class="d-flex align-items-center mb-3 text-decoration-none">
-        <i class="bi bi-steering-wheel fs-2 me-2"></i>
+      <a href="{% url 'index' %}" class="d-flex align-items-center mb-3 text-decoration-none">
+        <i class="bi bi-car-front-fill me-2" style="font-size: 1.5rem"></i>
         <span class="fs-4">Rent a Car</span>
       </a>
       <hr />
