--- a/vehicles/templates/vehicles/create_vehicle.html
+++ b/vehicles/templates/vehicles/create_vehicle.html
@@ -7,7 +7,7 @@
           <h3 class="mb-0">Cadastro de Veículo</h3>
         </div>
         <div class="card-body">
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group mb-4">{{ form.as_p }}</div>
 
