--- a/vehicles/templates/vehicles/update_vehicle.html
+++ b/vehicles/templates/vehicles/update_vehicle.html
@@ -7,7 +7,7 @@
           <h3 class="mb-0">Atualização de Veículo</h3>
         </div>
         <div class="card-body">
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %} {{ form.as_p }}
 
             <div class="d-flex justify-content-end gap-2 mt-4">
