--- a/vehicles/templates/vehicles/vehicle_detail.html
+++ b/vehicles/templates/vehicles/vehicle_detail.html
@@ -10,6 +10,20 @@
           <form method="post">
             {% csrf_token %}
             <div class="form-group mb-3">
+              <div class="mb-2">
+                {% if vehicle.image %}
+                <img
+                  src="../{{ vehicle.image }}"
+                  alt="Imagem do Veículo"
+                  class="img-fluid"
+                />
+                {% else %}
+                <p>Nenhuma imagem disponível</p>
+                {% endif %}
+              </div>
+            </div>
+
+            <div class="form-group mb-3">
               <label for="id">ID</label>
               <input
                 type="text"
@@ -134,6 +148,7 @@
                 value="{{ vehicle.plate }}"
                 disabled
               />
+            </div>
 
             <div class="d-flex justify-content-end gap-2 mt-4">
               <a
