--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link">
+          <a href="{% url 'client_list' %}" class="nav-link">
             <i class="bi bi-people-fill me-2"></i> Clientes
           </a>
         </li>
