--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -35,7 +35,7 @@
   </div>
   {% endfor %} {% endif %}
 
-  <table class="table table-striped table-hover">
+  <table class="table table-striped">
     <thead class="table-primary">
       <tr>
         <th scope="col">ID</th>
