--- a/client/templates/clients/form.html
+++ b/client/templates/clients/form.html
@@ -52,8 +52,11 @@
               <a href="{% url 'client_list' %}" class="btn btn-outline-secondary d-flex align-items-center">
                 <i class="bi bi-arrow-left me-2"></i> Voltar
               </a>
+              <button type="reset" class="btn btn-secondary d-flex align-items-center">
+                <i class="bi bi-x-circle me-2"></i> Limpar
+              </button>
               <button type="submit" class="btn btn-primary d-flex align-items-center">
-                <i class="bi bi-arrow-repeat me-2"></i> Atualizar
+                <i class="bi bi-check-circle me-2"></i> Cadastrar
               </button>
             </div>
           </form>
