--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -4,14 +4,24 @@
     <h3 class="mb-0 me-3 text-primary">Veículos</h3>
 
     <div class="d-flex ms-auto">
-      <form class="form-inline d-flex me-2">
+      <form class="form-inline d-flex me-2" method="get">
         <input
           class="form-control me-2"
           type="search"
-          placeholder="Buscar"
+          placeholder="modelo ou placa"
           aria-label="Buscar"
+          name="search"
+          value="{{ query|default:'' }}"
         />
-        <button class="btn btn-outline-primary" type="submit">Buscar</button>
+        <button class="btn btn-outline-primary me-2" type="submit">
+          Buscar
+        </button>
+
+        {% if query %}
+        <a href="{% url 'list_vehicles' %}" class="btn btn-outline-secondary"
+          >Limpar</a
+        >
+        {% endif %}
       </form>
 
       <a href="{% url 'create_vehicle' %}" class="btn btn-primary">
