--- a/vehicles/templates/vehicle_class/list_vehicle_classes.html
+++ b/vehicles/templates/vehicle_class/list_vehicle_classes.html
@@ -48,15 +48,49 @@
   {% endfor %} {% endif %}
 
   <table class="table table-striped table-hover">
-    <thead class="table-primary">
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Nome</th>
-        <th scope="col">Preço por dia</th>
-        <th scope="col">Descrição</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
+    <table class="table table-striped">
+      <thead class="table-primary">
+        <tr>
+          <th>
+            <a
+              href="?sort=id&order={% if sort == 'id' and order == 'asc' %}desc{% else %}asc{% endif %}&search={{ query|urlencode }}"
+              >ID {% if sort == 'id' %}<i
+                class="bi bi-caret-{% if order == 'asc' %}up{% else %}down{% endif %}-fill"
+              ></i
+              >{% endif %}</a
+            >
+          </th>
+          <th>
+            <a
+              href="?sort=name&order={% if sort == 'name' and order == 'asc' %}desc{% else %}asc{% endif %}&search={{ query|urlencode }}"
+              >Nome {% if sort == 'name' %}<i
+                class="bi bi-caret-{% if order == 'asc' %}up{% else %}down{% endif %}-fill"
+              ></i
+              >{% endif %}</a
+            >
+          </th>
+          <th>
+            <a
+              href="?sort=daily_price&order={% if sort == 'daily_price' and order == 'asc' %}desc{% else %}asc{% endif %}&search={{ query|urlencode }}"
+              >Preço Diário {% if sort == 'daily_price' %}<i
+                class="bi bi-caret-{% if order == 'asc' %}up{% else %}down{% endif %}-fill"
+              ></i
+              >{% endif %}</a
+            >
+          </th>
+          <th>
+            <a
+              href="?sort=description&order={% if sort == 'description' and order == 'asc' %}desc{% else %}asc{% endif %}&search={{ query|urlencode }}"
+              >Descrição {% if sort == 'description' %}<i
+                class="bi bi-caret-{% if order == 'asc' %}up{% else %}down{% endif %}-fill"
+              ></i
+              >{% endif %}</a
+            >
+          </th>
+          <th></th>
+        </tr>
+      </thead>
+
     <tbody>
       {% for vehicle_class in vehicle_classes %}
       <tr>
@@ -134,8 +168,48 @@
     </tbody>
   </table>
 
-  {% if vehicle_class.count == 0 %}
+  {% if vehicle_classes.paginator.count == 0 %}
   <div class="alert" role="alert">Nenhuma classe de veículo encontrada.</div>
   {% endif %}
+
+  <nav aria-label="Paginacao">
+    <ul class="pagination justify-content-center">
+      {% if vehicle_classes.has_previous %}
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="?page={{ vehicle_classes.previous_page_number }}&search={{ query|urlencode }}&sort={{ sort }}&order={{ order }}"
+          aria-label="Anterior"
+        >
+          ‹
+        </a>
+      </li>
+      {% else %}
+      <li class="page-item disabled">
+        <span class="page-link">‹</span>
+      </li>
+      {% endif %}
+
+      <li class="page-item active">
+        <span class="page-link">{{ vehicle_classes.number }}</span>
+      </li>
+
+      {% if vehicle_classes.has_next %}
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="?page={{ vehicle_classes.next_page_number }}&search={{ query|urlencode }}&sort={{ sort }}&order={{ order }}"
+          aria-label="Próxima"
+        >
+          ›
+        </a>
+      </li>
+      {% else %}
+      <li class="page-item disabled">
+        <span class="page-link">›</span>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
 </div>
 {% endblock %}
