--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link">
+          <a href="{% url 'employee_list' %}" class="nav-link">
             <i class="bi bi-person-badge-fill me-2"></i> Funcionários
           </a>
         </li>
