--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -76,6 +76,11 @@
             <i class="bi bi-person-badge-fill me-2"></i> Funcionários
           </a>
         </li>
+        <li>
+          <a href="" class="nav-link">
+            <i class="bi bi-file-earmark-text-fill me-2"></i> Relátórios
+          </a>
+        </li>
         <hr />
         <li>
           <a
