--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -77,8 +77,13 @@
           </a>
         </li>
         <li>
+          <a href="{% url 'list_reservations' %}" class="nav-link">
+            <i class="bi bi-calendar-check-fill me-2"></i> Reservas
+          </a>
+        </li>
+        <li>
           <a href="" class="nav-link">
-            <i class="bi bi-file-earmark-text-fill me-2"></i> Relátórios
+            <i class="bi bi-file-earmark-text-fill me-2"></i> Relatórios
           </a>
         </li>
         <hr />
