feat: dashborad principal

--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -82,7 +82,7 @@
           </a>
         </li>
         <li>
-          <a href="" class="nav-link">
+          <a href="{% url 'report_index' %}" class="nav-link">
             <i class="bi bi-file-earmark-text-fill me-2"></i> Relatórios
           </a>
         </li>
