--- a/vehicles/templates/vehicles/list_vehicles.html
+++ b/vehicles/templates/vehicles/list_vehicles.html
@@ -51,6 +51,7 @@
               <option value="available" {% if request.GET.status == 'available' %}selected{% endif %}>Disponível</option>
               <option value="rented" {% if request.GET.status == 'rented' %}selected{% endif %}>Alugado</option>
               <option value="maintenance" {% if request.GET.status == 'maintenance' %}selected{% endif %}>Manutenção</option>
+              <option value="reserved" {% if request.GET.status == 'reserved' %}selected{% endif %}>Reservado</option>
             </select>
           </div>
     
