--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -82,9 +82,26 @@
           </a>
         </li>
         <li>
-          <a href="{% url 'report_index' %}" class="nav-link">
-            <i class="bi bi-file-earmark-text-fill me-2"></i> Relatórios
+          <a
+            class="nav-link"
+            data-bs-toggle="collapse"
+            href="#reportCollapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="reportCollapse"
+          >
+            <i class="bi bi-bar-chart-fill me-2"></i> Relatórios
           </a>
+          <div class="collapse" id="reportCollapse">
+            <ul class="btn-toggle
+-nav list-unstyled fw-normal small ps-4">
+              <li>
+                <a href="{% url 'report_index' %}" class="nav-link">
+                  Relatório Geral
+                </a>
+              </li>
+            </ul>
+          </div>
         </li>
         <hr />
         <li>
