--- a/reservation/templates/reservations/list_reservations.html
+++ b/reservation/templates/reservations/list_reservations.html
@@ -153,6 +153,19 @@
           >
             <i class="bi bi-pencil-square text-primary"></i>
           </a>
+          <a
+            href="{% url 'create_pickup' reservation.id %}"
+            class="btn btn-sm"
+          >
+          <i class="bi bi-box-arrow-right text-primary"></i>
+          </a>
+          <a
+            href="{% url 'create_return' reservation.id %}"
+            class="btn btn-sm"
+          >
+            <i class="bi bi-arrow-left-circle text-primary"></i>
+          </a>
+          
           <button
             type="button"
             class="btn btn-sm"
