--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -86,6 +86,11 @@
             <i class="bi bi-file-earmark-text-fill me-2"></i> Relatórios
           </a>
         </li>
+        <li>
+          <a href="{% url 'maintenance_list' %}" class="nav-link">
+            <i class="bi bi-tools me-2"></i> Manutenção
+          </a>
+        </li>
         <hr />
         <li>
           <a
