feat: relatorio de cliente

--- a/rent_a_car/templates/base/base.html
+++ b/rent_a_car/templates/base/base.html
@@ -101,6 +101,13 @@
                 </a>
               </li>
             </ul>
+            <ul class="btn-toggle-nav list-unstyled fw-normal small ps-4">
+              <li>
+                <a href="{% url 'client_historic_report' %}" class="nav-link">
+                  Relatório de Clientes
+                </a>
+              </li>
+            </ul>
           </div>
         </li>
         <hr />
